src/style/schedular/schedular-leftpanel.css
.schedular-component {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: #f2f5f7;
}

.sc-leftpanel {
  width: 97.5%;
  font-family: var(--font-familyNue);
  background-color: white;
  border-radius: 4px;
  padding: 10px;
  margin: 10px 10px 0px 10px;
}

.sc-parent {
  width: 100%;
  background-color: white;
  margin: 10px 10px 10px 0;
}

.schedule-add {
  padding-bottom: 15px;
  border-bottom: solid 1px #d6d9d6;
}

.schedule-add .label-basic {
  height: 40px;
  font-size: 1rem;
  display: flex;
  align-items: center;
  color: #606060;
}

.schedule-search {
  padding-top: 15px;
}

.schedule-search .label-basic {
  height: 35px;
  display: flex;
  font-size: 1rem;
  color: #606060;
}

.btn-add-new-schedule button {
  cursor: pointer;
}

.schedule-search-input .label-basic {
  font-size: 0.75rem;
  margin-top: 5px;
}

.schedule-calendar-parent .label-basic {
  margin-top: 1rem;
  font-size: 1rem;
  color: #606060;
}
.schedule-calendar {
  width: 90%;
  margin: 2rem 1rem;
}
.Effect-Parent ul {
  list-style: none;
}
.Effect-Parent {
  margin-left: -2rem;
  margin-top: 1rem;
}
.Effect-Parent ul li {
  color: #808495;
}

.fc-direction-ltr .fc-timegrid-col-events {
  margin: 0;
}

@media screen and (min-width: 1024px) {
  .schedule-calendar {
    width: 100%;
    margin: 2rem 0rem;
  }
}

@media screen and (min-width: 769px) {
  .schedule-calendar {
    width: 100%;
  }
  .schedular-component {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: row;
    background-color: #f2f5f7;
  }
  .sc-leftpanel {
    margin: 10px;
    width: 30%;
    font-family: var(--font-familyNue);
    background-color: white;
    border-radius: 4px;
    padding: 10px;
  }
  .sc-parent {
    width: 70%;
    background-color: white;
    margin: 10px 10px 10px 0;
  }
  .btn-add-new-schedule button {
    width: 100%;
    cursor: pointer;
  }
}

@media screen and (min-width: 900px) {
  .sc-leftpanel {
    margin: 10px;
    width: 20%;
    font-family: var(--font-familyNue);
    background-color: white;
    border-radius: 4px;
    padding: 10px;
  }
  .sc-parent {
    width: 80%;
    background-color: white;
    margin: 10px 10px 10px 0;
  }
}

